<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Analog Clock</string>
    <string name="alarm">alarm</string>
    <string name="alarm_at">set alarm at: </string>
    <string name="setting">Setting</string>
    <string name="settings">Settings</string>
    <string name="advanced">Advanced</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="alert_sound">Alert Sound</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="default_label">JIKE</string>
    <string name="never_repeat">Never Repeat</string>
    <string name="every_day">every day</string>
    <string name="day_concat">, </string>
    
    <!-- Setting title for changing the snooze duration. -->
    <string name="snooze_duration_title">Snooze</string>
    <!-- Entries listed in the ListPreference when invoking the snooze duration
         preference. -->
    <string-array name="snooze_duration_entries">
      	<item>5 minutes</item>
      	<item>10 minutes</item>
      	<item>15 minutes</item>
      	<item>20 minutes</item>
      	<item>25 minutes</item>
      	<item>30 minutes</item>
    	<item>Never</item>
	</string-array>
    <!-- Values that are retrieved from the ListPreference. These must match
         the snooze_duration_entries above. -->
    <string-array name="snooze_duration_values">
	      <item>5</item>
	      <item>10</item>
	      <item>15</item>
	      <item>20</item>
	      <item>25</item>
	      <item>30</item>
	   	 <item>0</item>
	</string-array>

    <string name="fade_in_length_title">Sound fade in</string>
	<string name="fade_in_length_summary">set the alert fade in time</string>
	<!-- Entries listed in the ListPreference when invoking the snooze duration
         preference. -->
    <string-array name="fade_in_length_entries">
	      <item>1 minutes</item>
	      <item>2 minutes</item>
	      <item>5 minutes</item>
	      <item>10 minutes</item>
	      <item>15 minutes</item>
	      <item>30 minutes</item>
	    <item>Never</item>
	</string-array>
    <!-- Values that are retrieved from the ListPreference. These must match
         the snooze_duration_entries above. -->
    <string-array name="fade_in_length_values">
	      <item>1</item>
	      <item>2</item>
	      <item>5</item>
	      <item>10</item>
	      <item>15</item>
	      <item>30</item>
	    <item>0</item>
	</string-array>
	
    
    <!-- Setting labels on Set alarm screen: Set time  -->
    <string name="time">Time</string>

    <!-- Button labels on the alarm dialog: Dismiss -->
    <string name="alarm_alert_dismiss_text">Dismiss</string>

    <!-- Alarm Alert screen: this message is shown after an alarm rung
         unattended for a number of minutes.  It tells the user that
         the alarm has been silenced.-->
    <string name="alarm_alert_alert_silenced">Alarm silenced after <xliff:g id="minutes">%d</xliff:g> minutes</string>

    <!-- Button labels on the alarm dialog: Snooze -->
    <string name="alarm_alert_snooze_text">Snooze</string>

    <!-- Toast that appears after Alarm is snoozed from the Alarm
         dialog. Says the alarm will snooze for xxx minutes.  -->
    <string name="alarm_alert_snooze_set">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</string>

    <!-- 0: nothing
         1: days
         2:      hours
         3: days hours
         4:            minutes
         5: days       minutes
         6:      hours minutes
         7: days hours minutes
    --><skip />

    <!-- Alarm confirmation toast: Describes how long from now until
         alarm fires -->
    <string-array name="alarm_set">
        <item>This alarm is set for less than 1 minute from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g>, <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g>, and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
    </string-array>

    <!-- Alarm confirmation toast: singular day -->
    <string name="day">"1 day"</string>

    <!-- Alarm confirmation toast: plural days -->
    <string name="days">"<xliff:g id="days">%s</xliff:g> days"</string>

    <!-- Alarm confirmation toast: singular hour -->
    <string name="hour">1 hour</string>

    <!-- Alarm confirmation toast: plural hours -->
    <string name="hours"><xliff:g id="hours">%s</xliff:g> hours</string>

    <!-- Alarm confirmation toast: singular minute  -->
    <string name="minute">"1 minute"</string>

    <!-- Alarm confirmation toast: plural minutes  -->
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> minutes"</string>

    
    
    <!-- Setting title for changing the alarm volume. -->
    <string name="alarm_volume_title">Volume</string>

    <!-- Setting summary for changing the alarm volume. -->
    <string name="alarm_volume_summary">Set the volume of alarms</string>

    <!-- Summary for the alarm preference when silent is chosen. -->
    <string name="silent_alarm_summary">Silent</string>

    <!-- Text to display in the small text of the notification -->
    <string name="alarm_notify_text">Select to snooze or dismiss this alarm.</string>

    <!-- Text to display in the notification ticker and label -->
    <string name="alarm_notify_snooze_label"><xliff:g id="label">%s</xliff:g> (snoozed)</string>

    <!-- Text to display in the notification when the alarm has been snoozed -->
    <string name="alarm_notify_snooze_text">Alarm set for <xliff:g id="time">%s</xliff:g>. Select to cancel.</string>
    <string name="alarm_ampm">Alarm at am/pm</string>
    <string-array name="sound_type_values">
      <item>0</item>
      <item>1</item>
	</string-array>
<string name="sound_type_title">Alarm type</string>
	<string-array name="sound_type_entries">
      <item>Music</item>
      <item>Sound</item>
	</string-array>
<string name="sound_type_summay">Select sound type: Ringtone or Music</string>
<string name="select_song">Select music</string>
<string name="time_over_string">Time is over!</string>
<string name="timer_title">Timer</string>
<string name="stopwatch_title">Stopwatch</string>
<!-- "Ascending", "Birds", "Classic",
			"Cuckoo", "Digital", "Electronic", "High Tone", "Mbira",
			"Old Clock", "Rooster", "School Bell", -->
<string-array name="sound_name_entries">
      	<item>Ascending</item>
      	<item>Birds</item>
      	<item>Classic</item>
      	<item>Cuckoo</item>
      	<item>Digital</item>
      	<item>Electronic</item>
    	<item>High Tone</item>
    	<item>Mbira</item>
    	<item>Old Clock</item>
    	<item>Rooster</item>
    	<item>School Bell</item>
	</string-array>
<string name="slient">silent</string>
<string name="never">Never</string>
<string name="min"> minutes</string>
<string name="sound">Sound</string>
<string name="music">Music</string>
<string name="dialog_stop_title"> Stop timer? </string>
<string name="dialog_ok_title"> Yes </string>
<string name="dialog_cancel_title"> No </string>
<string name="start">Start</string>
<string name="pause">Pause</string>
<string name="reset">Reset</string>
	
</resources>